# hyrd_robot_pinn

./: .gitignore  README.md
ESP32/: Test_motor_v2.ino  config.h  protocol.ino  safety.ino  servo_modes.ino  servo_register.ino  wifi_udp.ino
models/: scalers_only.pt
raspberry_pi/: config.py  main.py  robot_api.py  robot_monitor.py
robot_brain/: package.xml  readme.md  setup.py
robot_brain/robot_brain/: NN.md  big_cleaner.py  brain_core.py  data_generator_expert_v3.py  dynamic_target.py  dynamic_target_ob_avoi.py  hybrid_phantom_sim _demo2.py  hybrid_phantom_sim _origin.py  hybrid_phantom_sim.py  inference_MLP_V1.py  neural_controller_trajectory_MLP_V1.py  orchestrator.py  plot_results.py  predict_topo_impulse.py  process_and_analyze_smooth.py  target_generator.py  testtesttest_topo_impulse_big.py  topo_controller.py  train_offline_xy_only.py  train_topo_impulse_big.py
robot_brain/robot_brain/core/: BigTrain_config.py  babbling_node.py  config.py  data_cleaner.py  feature_eng.py  feature_eng_angle.py  health_inspector.py  latency_calib.py  loom_planner.py  loom_planner_old.py  trainer.py
robot_brain/scripts/: SavGol.py  analyze_expert_data.py  calculate_split_weights.py  check_clean_jumps.py  check_direction.py  check_pt_histogram.py  check_thresholds.py  clean_expert_data.py  data_cleaner_test_bad_data.py  data_generator_expert_v2.py  diagnose_batch.py  generate_xy_dataset.py  inspect_data.py  inspect_data_jumps.py  orchestrator_train_old.py  plot_json.py  plot_paper_fig.py  plot_result_topo.py  raw_log.csv  raw_log.txt  read_log.py  readme.md  sim_jacobian_check copy.py  sim_jacobian_check.py  train_offline.py  train_topo_impulse.py  visualize_prediction.py  visualize_xy_prediction.py
robot_control/: package.xml  setup.py
robot_control/FK_model/: fk_001.py  plot_one_seg.py  test_J.py
robot_control/data/: boundary_march_10d.npy  boundary_march_id1_5.npy  boundary_servo_9to1_lock.npy  boundary_staged_1500.npy  loom_pro_10d.npy  motor_babbling_10d.npy
robot_control/data_generate/: Loom.py  vis_results.py
robot_control/launch/: hyrd_robot.launch.py
robot_control/robot_control/: babbling_test_copy.txt  config.py  ros_utils.py  teleop_keyboard.py  vision_node.py  xbox_teleop.py
robot_control/robot_control/algorithms/: math_utils.py  pose_3d.py  red_tracker.py  tracker_2d.py
robot_control/robot_control/drivers/: camera.py
robot_driver/: CMakeLists.txt  package.xml
robot_driver/src/: driver_node.cpp
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/msg/: MotorCommand.msg  MotorState.msg  VisionState.msg
